price overflow/clipping and alignment repaired

--- a/dark.scss
+++ b/dark.scss
@@ -143,7 +143,7 @@ $imageWidthMd: 100px;
     display: inline-block;
     font-family:'Libre Baskerville', 'Georgia', serif;
     font-size:1.3em;
-    line-height:0.85em;
+    line-height:1;
     width: 100%;
     color:$medOpacity;
     }
@@ -279,7 +279,7 @@ $imageWidthMd: 100px;
     }
   .webkite-result-body{
     .webkite-prices {
-      margin-top:$mainGutter/2.5;
+      margin-top:$mainGutter/4;
       & > .webkite-block {
         width:50%;
         display:inline-block;
@@ -290,10 +290,19 @@ $imageWidthMd: 100px;
     .webkite-price{
       display: inline;
       font-size:1.3em;
-      line-height:0.85em;
+      text-align:left;
+      }
+    .webkite-price-value {
+      vertical-align:bottom;
       }
     .webkite-price-label{
-      font-size:0.65em;
+      font-size:12px;
+      display:inline-block;
+      width:auto;
+      overflow:hidden;
+      vertical-align:bottom;
+      position:relative;
+      top:-1px;
       }
     }
   }
@@ -311,7 +320,7 @@ $imageWidthMd: 100px;
   .webkite-block.webkite-block-seventy {width:100%;}
   .webkite-result-body{
     .webkite-prices {
-      margin-top:$mainGutter/2.5;
+      margin-top:$mainGutter/4;
       & > .webkite-block {
         display:inline-block;
         vertical-align:top;
@@ -321,10 +330,19 @@ $imageWidthMd: 100px;
     .webkite-price{
       display: inline;
       font-size:1.3em;
-      line-height:0.85em;
+      text-align:left;
+      }
+    .webkite-price-value {
+      vertical-align:bottom;        
       }
     .webkite-price-label{
-      font-size:0.65em;
+      font-size:12px;
+      display:inline-block;
+      width:auto;
+      overflow:hidden;
+      vertical-align:bottom;
+      position:relative;
+      top:-1px;
       }
     }
   }
@@ -339,7 +357,7 @@ $imageWidthMd: 100px;
     }
   .webkite-prices-wrap {padding-left:0;}
   .webkite-prices {margin-left:0;}
-  .webkite-price-label {width:100%; display:block;}
+  .webkite-price-label {width:100%; display:block; margin-top:-2px;}
   }
 
 /*************************** DISPLAY RULES */
